updated "orange" functionality

--- a/assignments/exercises/613-dj-js-event-listener-practice/index.html
+++ b/assignments/exercises/613-dj-js-event-listener-practice/index.html
@@ -16,7 +16,7 @@
             <li>Red when the mouse button is held down over the square</li>
             <li>Yellow when the mouse button is let go over the square</li>
             <li>Green when the mouse is double clicked in the square</li>
-            <li>Orange when the mouse is outside of the square.</li>
+            <li>Orange when the mouse is used to scroll page</li>
             <li>Type the first letter of each color to see it in the square(i.e- typing "r" on the keyboard for "red")</li>
         </ul>
     </div>
