--- a/assignments/exercises/615-dom-debug/index.html
+++ b/assignments/exercises/615-dom-debug/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main" data-level="0">
-        <input id="input"/>
+        <input id="input" placeholder="Start typing here..."/>
         <button id="add">Add new item</button>
         <div id="list">
 
