--- a/assignments/mastery-tasks/moms-shopping-list-start/index.html
+++ b/assignments/mastery-tasks/moms-shopping-list-start/index.html
@@ -25,24 +25,26 @@
                 <h3 class="title">list of items</h3>
             </div>
             <hr>
-            <ul id="list">
-                <li>
-                    <div>Milk</div>
-                    <button>edit</button>
-                    <button>X</button>
-                </li>
-                <li>
-                    <div>Cheerios</div>
-                    <button>edit</button>
-                    <button>X</button>
-                </li>
-                <li>
-                    <div>2 Goats</div>
-                    <button>edit</button>
-                    <button>X</button>
-                </li>  
-                <hr>              
-            </ul>
+                <ul id="list">
+                    <!---SAMPLE
+                    <li>
+                        <div>Milk</div>
+                        <button>edit</button>
+                        <button>X</button>
+                    </li>
+                    <li>
+                        <div>Cheerios</div>
+                        <button>edit</button>
+                        <button>X</button>
+                    </li>
+                    <li>
+                        <div>2 Goats</div>
+                        <button>edit</button>
+                        <button>X</button>
+                    </li>  
+                    -->      
+                </ul>  
+            <hr> 
         </div>
     </div>
     <script src="index.js"></script>
